2005-10-07  Erez Zadok  <ezk@cs.sunysb.edu>

	* amq/pawd.c (find_mt, find_mlp): remove obsolete, inefficient
	code.
	(transform_dir): call the new, efficient amqproc_pawd_1() routine.

	* amq/amq_clnt.c (amqproc_pawd_1): AMQPROC_PAWD wrapper routine.

	* amq/amq.h (amqproc_pawd_1): extern for amq's AMQPROC_PAWD
	wrapper routine.

	* amd/amq_svc.c (amq_program_1): dispatch point for
	amqproc_pawd_1_svc.

	* amd/amq_subr.c (amqproc_pawd_1_svc): moved pawd's path-matching
	functionality into Amd, where it can be done a lot more
	efficiently.  We don't have to construct and ship a whole export
	tree from Amd to pawd.  We just get a variable-length
	xdr_wrapstring for the user's path, iterate over the entire export
	list inside Amd, and return only a matched string if found
	(otherwise we return "" to indicate that there was no match, and
	let pawd printf the same string it sent over).

	* amd/amd.h: extern for amqproc_pawd_1_svc, amd's service routine
	the AMQPROC_PAWD RPC.

2005-10-06  Erez Zadok  <ezk@cs.sunysb.edu>

	* ltmain.sh, m4/macros/libtool.m4: update to libtool-1.5.20.
	Fixes Tru64 bugs when using ksh.

	* amd/amfs_toplvl.c (amfs_toplvl_mount): break complex ifdef macro
	into two sections, to workaround a C99 varargs-macro bug in
	gcc-3.2.2 (RH9).

	* libamu/wire.c (print_wires): convert argument-less xsnprintf to
	xstrlcpy.

	* include/am_utils.h: use new HAVE_C99_VARARGS_MACROS or
	HAVE_GCC_VARARGS_MACROS to pass file name and line number to
	xsnprintf/xvsnprintf.

	* libamu/strutil.c (xsnprintf, xvsnprintf): if debugging is on,
	then also print the source file name and line number that called
	xsnprintf/xvsnprintf with a buffer that wasn't large enough (most
	likely an am-utils bug).

	* Makefile.am (EXTRA_DIST_M4): distribute new
	check_varargs_macros.m4 file.

	* configure.in: execute new AMU_VARARGS_MACROS test.

	* m4/macros/check_varargs_macros.m4: new test to check what style
	of variable-length argument macros, if any, does the